@@ -2,6 +2,11 @@
 Version (SVN)
 -------------
 
+XML:   Resolved issue CASTOR-1462 using contribution from Dave Brosius [dbrosius@qis.net]
+       Moved wrongly placed parenthesis that caused toString() being executed for no reason.
+       Details: http://jira.codehaus.org/browse/CASTOR-1462
+       (Ralf - 20060626)
+
 All:   Resolved issue CASTOR-1456 using contribution from Ralf Joachim [ralf.joachim@syscon-world.de]
        Extracted creation of MappingLoaders from Mapping into new MappingLoaderRegistry.
        Details: http://jira.codehaus.org/browse/CASTOR-1456
